--- a/projects/material-time-picker/src/lib/w-time-dialog/w-time-dialog.component.html
+++ b/projects/material-time-picker/src/lib/w-time-dialog/w-time-dialog.component.html
@@ -1,5 +1,5 @@
 
 <div mat-dialog-content class="w-timepicker-dialog">
-    <w-time [color]="color" [userTime]="userTime" (onRevert)="revert()" (onSubmit)="submit()"></w-time>
+    <w-time [color]="color" [userTime]="userTime" (onRevert)="revert()" (onSubmit)="submit()" [revertLabel]="data.revertLabel" [submitLabel]="data.submitLabel"></w-time>
 </div>
 
