refactor: migrate components to MDC-based components

--- a/projects/material-time-picker/src/lib/w-clock/w-clock.component.scss
+++ b/projects/material-time-picker/src/lib/w-clock/w-clock.component.scss
@@ -45,7 +45,7 @@
       position: absolute;
       transform: translate(-50%, -50%);
       transition: transform 200ms;
-      .mat-mini-fab {
+      .mat-mdc-mini-fab {
         box-shadow: none;
         background-color: transparent;
       }
