use bootsrap instead flex-layout (deprecated)

--- a/projects/material-time-picker/src/lib/w-clock/w-clock.component.html
+++ b/projects/material-time-picker/src/lib/w-clock/w-clock.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="center center" class="w-clock-wrapper">
+<div class="d-flex flex-row justify-content-center align-items-center w-clock-wrapper">
     <div class="w-clock">
         <div class="w-clock-container">
             
