--- a/projects/material-time-picker/src/lib/material-timepicker/material-timepicker.component.scss
+++ b/projects/material-time-picker/src/lib/material-timepicker/material-timepicker.component.scss
@@ -4,3 +4,14 @@
     margin: 0;
     min-width: 44px;
 }
+
+/**
+ * Attention un effet de bord peut être visible pour les autres composants
+ */
+.mat-mdc-form-field-flex {
+    display: inline-flex;
+    // Valeur par défaut align-items: baseline;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+}
