--- a/projects/material-time-picker/src/lib/w-time/w-time.component.html
+++ b/projects/material-time-picker/src/lib/w-time/w-time.component.html
@@ -16,8 +16,8 @@
       <w-clock [color]="color" class="w-animation-zoom" [userTime]="userTime" (userTimeChange)="emituserTimeChange($event)" [(currentView)]="currentView" (viewChange)="setCurrentView($event)"></w-clock>
 
       <div class="d-flex align-items-end">
-          <button mat-button (click)="revert()">{{revertLabel}}</button>
-          <button mat-button [color]="color" (click)="submit()">{{submitLabel}}</button>
+          <button class="btn btn-sm" (click)="revert()">{{revertLabel}}</button>
+          <button class="btn btn-sm btn-{{color}}" (click)="submit()">{{submitLabel}}</button>
       </div>
   </div>
 </div>
