--- a/projects/material-time-picker/src/lib/w-time/w-time.component.scss
+++ b/projects/material-time-picker/src/lib/w-time/w-time.component.scss
@@ -1,3 +1,5 @@
+@import '../styles/base.scss';
+
 :host {
   display: block;
 }
@@ -9,10 +11,7 @@
   .w-timepicker-time-container {
     padding: 15px;
     min-width: 160px;
-    width: 160px;
-    &.mat-toolbar-single-row {
-      height: 100%;
-    }
+    height: 100%;
   }
   .w-timepicker-selected-time {
     font-size: 3.5rem;
@@ -40,11 +39,6 @@
       min-width: auto;
       width: 100%;
       height: 100px;
-
-      .w-timepicker-selected-time {
-
-      }
-
       .w-timepicker-selected-ampm {
         padding: 0 12px;
       }
