--- a/projects/material-time-picker/src/lib/w-clock/w-clock.component.html
+++ b/projects/material-time-picker/src/lib/w-clock/w-clock.component.html
@@ -1,24 +1,26 @@
 <div class="d-flex flex-row justify-content-center align-items-center w-clock-wrapper">
-    <div class="w-clock">
-        <div class="w-clock-container">
-            
-            <!-- Clock center -->
-            <button  mat-mini-fab [color]="color" class="w-clock-center"></button>
+  <div class="w-clock">
+    <div class="w-clock-container">
 
-            <!-- Clock hand -->
-            <mat-toolbar [ngStyle]="getPointerStyle()" [color]="color" class="w-pointer">
-                <button mat-mini-fab [color]="color" class="w-clock-selected"></button>
-            </mat-toolbar>
-            
-            <!-- Hour / Minute number faces -->
-            <div *ngFor="let step of steps; let i = index" [class]="getTimeValueClass(step, i)" >
-                <button mat-mini-fab
-                    [color]="selectedTimePart === step ? color : ''"
-                    (click)="changeTimeValue(step)">
-                    {{ step }}
-                </button>
-            </div>
+      <!-- Clock center -->
+      <button  mat-mini-fab [color]="color" class="w-clock-center"></button>
 
+      <!-- Clock hand -->
+      <mat-toolbar [ngStyle]="getPointerStyle()" [color]="color" class="w-pointer">
+        <button mat-mini-fab [color]="color" class="w-clock-selected"></button>
+      </mat-toolbar>
+
+      <!-- Hour / Minute number faces -->
+      @for (step of steps; track step; let i = $index) {
+        <div [class]="getTimeValueClass(step, i)" >
+          <button mat-mini-fab
+            [color]="selectedTimePart === step ? color : ''"
+            (click)="changeTimeValue(step)">
+            {{ step }}
+          </button>
         </div>
+      }
+
     </div>
+  </div>
 </div>
