--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,18 +17,18 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$theme-primary: mat.define-palette(mat.$indigo-palette, 900);
-$theme-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
+$theme-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 900);
+$theme-accent: mat.m2-define-palette(mat.$m2-amber-palette, A200, A100, A400);
 // The warn palette is optional (defaults to red).
-$theme-warn: mat.define-palette(mat.$pink-palette);
+$theme-warn: mat.m2-define-palette(mat.$m2-pink-palette);
 // Create the theme object (a Sass map containing all of the palettes).
-$material-picker-theme: mat.define-light-theme((
+$material-picker-theme: mat.m2-define-light-theme((
  color: (
    primary: $theme-primary,
    accent: $theme-accent,
    warn: $theme-warn,
  ),
- typography: mat.define-typography-config(),
+ typography: mat.m2-define-typography-config(),
  density: 0,
 ));
 
