chore: replace @import with @use for SCSS files to align with Angular 19 standards

--- a/projects/material-time-picker/src/lib/w-time/w-time.component.scss
+++ b/projects/material-time-picker/src/lib/w-time/w-time.component.scss
@@ -1,4 +1,4 @@
-@import '../styles/base.scss';
+@use '../styles/base.scss';
 
 :host {
   display: block;
@@ -30,7 +30,7 @@
     w-clock {
       padding: 12px 0;
       height: calc(100% - 58px);
-    }  
+    }
   }
 
   &.vertical-time {
