chore(deps): update Angular CDK and Material to version 19.2.19
style: update styles to include elevation classes and app background

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,8 @@
 //  If you specify typography styles for the components you use elsewhere, you should delete this line.
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
